--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -5,6 +5,38 @@
 <title>Where to go? 어디로 갈까</title>
 </head>
 <body>
-
+<div id="ember탭" class="ember-view"><header class="d-header clearfix">
+<div class="wrap">
+<div class="contents clearfix">
+<div class="panel clearfix">
+<div class="hamburger-panel" data-click-outside="true">
+<div class="menu-panel slide-in" style="top: 101px; height: 251px; width: 300px;" data-max-width="300">
+<div class="panel-body" style="height: 100%;">
+<div class="panel-body-contents clearfix">
+<div class="menu-container-general-links">
+<ul class="menu-links columned">
+<li><a class="widget-link latest-topics-link" title="가장 최근에 작성된 글" href="/~~~~~~/latest"><span class="d-label">최근 글</span></a></li>
+<li><a class="widget-link top-topics-link" title="가장 핫한 주제" href="/~~~~~/hot"><span class="d-label">인기 글</span></a></li>
+</ul>
+<div class="clearfix(최근글 인기글)">&nbsp;</div>
+<hr /></div>
+<ul class="category-links clearfix">
+<li class="category-link subcategory category-여행 후기"><a class="badge-wrapper none" href="/~~~~~~/후기/여행 후기"><span class="badge-category clear-badge" title="Discuss after trip" data-drop-close="true"><span class="category-name">여행 후기</span></span></a></li>
+<li class="category-link subcategory category-여행 계획"><a class="badge-wrapper none" href="/~~~~~~/계획/여행 계획"><span class="badge-category clear-badge" title="Planning before trip" data-drop-close="true"><span class="category-name">여행 계획</span></span></a></li>
+<li class="category-link subcategory category-customer-support"><a class="badge-wrapper none" href="/~~~~~~~/customer-support"><span class="badge-category clear-badge" title="Support Agent moderated forum to discuss and issues." data-drop-close="true"><span class="category-name">고객 지원 게시판</span></span></a></li>
+</ul>
+<hr />
+<div class="menu-container-footer-links">
+<div class="clearfix">&nbsp;</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="b-breadcrumbs"><a class="b-breadcrumb b-breadcrumb-home" href="/~~~~~/전체 게시판">전체 게시판 </a> <a class="b-breadcrumb b-breadcrumb-category" href="/~~~~~/후기 게시판"> 후기 글 </a></div>
+</div>
+</div>
+</header></div>
 </body>
 </html>
