--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -1,42 +1,251 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="ko">
+
 <head>
-<meta charset="EUC-KR">
-<title>Where to go? 어디로 갈까</title>
+  <meta charset="EUC-KR">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Where to go? 어디로 갈까</title>
+
+  <!--<link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">-->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+  <!--<link rel="stylesheet" href="//unpkg.com/bootstrap@4/dist/css/bootstrap.min.css">-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">]
+  <!--<link href="css/freelancer.min.css" rel="stylesheet">-->
+
 </head>
-<body>
-<div id="ember탭" class="ember-view"><header class="d-header clearfix">
-<div class="wrap">
-<div class="contents clearfix">
-<div class="panel clearfix">
-<div class="hamburger-panel" data-click-outside="true">
-<div class="menu-panel slide-in" style="top: 101px; height: 251px; width: 300px;" data-max-width="300">
-<div class="panel-body" style="height: 100%;">
-<div class="panel-body-contents clearfix">
-<div class="menu-container-general-links">
-<ul class="menu-links columned">
-<li><a class="widget-link latest-topics-link" title="가장 최근에 작성된 글" href="/~~~~~~/latest"><span class="d-label">최근 글</span></a></li>
-<li><a class="widget-link top-topics-link" title="가장 핫한 주제" href="/~~~~~/hot"><span class="d-label">인기 글</span></a></li>
-</ul>
-<div class="clearfix(최근글 인기글)">&nbsp;</div>
-<hr /></div>
-<ul class="category-links clearfix">
-<li class="category-link subcategory category-여행 후기"><a class="badge-wrapper none" href="/~~~~~~/후기/여행 후기"><span class="badge-category clear-badge" title="Discuss after trip" data-drop-close="true"><span class="category-name">여행 후기</span></span></a></li>
-<li class="category-link subcategory category-여행 계획"><a class="badge-wrapper none" href="/~~~~~~/계획/여행 계획"><span class="badge-category clear-badge" title="Planning before trip" data-drop-close="true"><span class="category-name">여행 계획</span></span></a></li>
-<li class="category-link subcategory category-customer-support"><a class="badge-wrapper none" href="/~~~~~~~/customer-support"><span class="badge-category clear-badge" title="Support Agent moderated forum to discuss and issues." data-drop-close="true"><span class="category-name">고객 지원 게시판</span></span></a></li>
-</ul>
-<hr />
-<div class="menu-container-footer-links">
-<div class="clearfix">&nbsp;</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class="b-breadcrumbs"><a class="b-breadcrumb b-breadcrumb-home" href="/~~~~~/전체 게시판">전체 게시판 </a> <a class="b-breadcrumb b-breadcrumb-category" href="/~~~~~/후기 게시판"> 후기 글 </a></div>
-</div>
-</div>
-</header></div>
+
+
+
+<body id="page-top">
+
+<!-- Navigation -->
+  <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Where To Go</a><!--클릭하면 페이지 최상단으로 -->
+      <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        Menu
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+
+
+
+  <!---->
+  <!--<nav class="bg-secondary text-uppercase" id="subNav">-->
+  	<div id="ember탭" class="ember-view">
+		<header class="d-header clearfix">
+		<div class="container">
+		<div class="hdtb-mitem hdtb-imb" aria-selected="false" role="tab">
+			<a class="q qs" href="">
+				<span class="HF9Klc iJddsb" style="height:20px;width:16px">
+				<!--<svg focusable="false" viewBox="0 0 1 1" xmlns="http://www.w3.org/2000/svg">
+					<path clip-rule="evenodd" d="M0 0h24v24H0z" fill="none"></path>
+					<path clip-rule="evenodd" d="M10 16.5l6-4.5-6-4.5v9zM5 20h14a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1zm14.5 2H5a3 3 0 0 1-3-3V4.4A2.4 2.4 0 0 1 4.4 2h15.2A2.4 2.4 0 0 1 22 4.4v15.1a2.5 2.5 0 0 1-2.5 2.5z" fill-rule="evenodd"></path>
+				</svg>-->
+					<ul class="menu-links columned">
+						<li><a class="widget-link latest-topics-link" title="가장 최근에 작성된 글" href="/~~~~~~/latest"><span class="d-label">최근 글</span></a></li>
+						<li><a class="widget-link top-topics-link" title="가장 핫한 주제" href="/~~~~~/hot"><span class="d-label">인기 글</span></a></li>
+					</ul>
+				</span>게시판
+			</a>
+		</div>
+		</div>
+		</header>
+	</div>
+
+	
+	<div id="ember탭" class="ember-view">
+		<header class="d-header clearfix">
+		<div class="container">
+			<div class="wrap">
+			<div class="contents clearfix">
+			<div class="panel clearfix">
+			<div class="hamburger-panel" data-click-outside="true">
+			<div class="menu-panel slide-in" style="top: 101px; height: 251px; width: 300px;" data-max-width="300">
+			<div class="panel-body" style="height: 100%;">
+			<div class="panel-body-contents clearfix">
+			<div class="menu-container-general-links">
+				<ul class="menu-links columned">
+					<li><a class="widget-link latest-topics-link" title="가장 최근에 작성된 글" href="/~~~~~~/latest"><span class="d-label">최근 글</span></a></li>
+					<li><a class="widget-link top-topics-link" title="가장 핫한 주제" href="/~~~~~/hot"><span class="d-label">인기 글</span></a></li>
+				</ul>
+					<div class="clearfix(최근글 인기글)">&nbsp;</div>
+			<hr /></div>
+				<ul class="category-links clearfix">
+					<li class="category-link subcategory category-trip"><a class="badge-wrapper none" href="/~~~~~~/tripLog"><span class="badge-category clear-badge" title="Discuss after trip" data-drop-close="true"><span class="category-name">여행 일지</span></span></a></li>
+					<li class="category-link subcategory category-trip"><a class="badge-wrapper none" href="/~~~~~~/tripPlan"><span class="badge-category clear-badge" title="Planning before trip" data-drop-close="true"><span class="category-name">여행 플랜</span></span></a></li>
+					<li class="category-link subcategory category-Forum"><a class="badge-wrapper none" href="/~~~~~~/freeForum"><span class="badge-category clear-badge" title="Planning before trip" data-drop-close="true"><span class="category-name">자유게시판</span></span></a></li>
+					<li class="category-link subcategory category-customer-support"><a class="badge-wrapper none" href="/~~~~~~~/customer-support"><span class="badge-category clear-badge" title="Support Agent moderated forum to discuss and issues." data-drop-close="true"><span class="category-name">고객 지원 게시판</span></span></a></li>
+				</ul>
+			<hr />
+			<div class="menu-container-footer-links">
+			<div class="clearfix">&nbsp;</div>
+			</div>
+			</div>
+			</div>
+			</div>
+			</div>
+			</div>
+				<div class="b-breadcrumbs"><a class="b-breadcrumb b-breadcrumb-home" href="/~~~~~/전체 게시판">전체 게시판 </a> <a class="b-breadcrumb b-breadcrumb-category" href="/~~~~~/후기 게시판"> 후기 글 </a></div>
+			</div>
+			</div>
+		</div>
+		</header>
+	</div>
+
+
+    <!-- Masthead -->
+  <header class="masthead bg-primary text-white text-center">
+    <div class="container d-flex align-items-center flex-column">
+
+      <!-- Masthead Avatar Image -->
+      <img class="masthead-avatar mb-5" src="http://www.hotelrestaurant.co.kr/data/photos/20190416/art_15554800195894_783572.bmp" alt="">
+
+      <!-- Masthead Heading -->
+      <h1 class="masthead-heading text-uppercase mb-0">W T G</h1>
+
+      <!-- Masthead Subheading -->
+      <p class="masthead-subheading font-weight-light mb-0">The Way Design Your Trip</p>
+
+    </div>
+  </header>
+
+	<!--<div id="ember탭" class="ember-view">
+		<header class="d-header clearfix">
+		<div class="container">
+			<div class="wrap">
+			<div class="contents clearfix">
+			<div class="panel clearfix">
+			<div class="hamburger-panel" data-click-outside="true">
+			<div class="menu-panel slide-in" style="top: 101px; height: 251px; width: 300px;" data-max-width="300">
+			<div class="panel-body" style="height: 100%;">
+			<div class="panel-body-contents clearfix">
+			<div class="menu-container-general-links">
+				<ul class="menu-links columned">
+					<li><a class="widget-link latest-topics-link" title="가장 최근에 작성된 글" href="/~~~~~~/latest"><span class="d-label">최근 글</span></a></li>
+					<li><a class="widget-link top-topics-link" title="가장 핫한 주제" href="/~~~~~/hot"><span class="d-label">인기 글</span></a></li>
+				</ul>
+					<div class="clearfix(최근글 인기글)">&nbsp;</div>
+			<hr /></div>
+				<ul class="category-links clearfix">
+					<li class="category-link subcategory category-trip"><a class="badge-wrapper none" href="/~~~~~~/tripLog"><span class="badge-category clear-badge" title="Discuss after trip" data-drop-close="true"><span class="category-name">여행 일지</span></span></a></li>
+					<li class="category-link subcategory category-trip"><a class="badge-wrapper none" href="/~~~~~~/tripPlan"><span class="badge-category clear-badge" title="Planning before trip" data-drop-close="true"><span class="category-name">여행 플랜</span></span></a></li>
+					<li class="category-link subcategory category-Forum"><a class="badge-wrapper none" href="/~~~~~~/freeForum"><span class="badge-category clear-badge" title="Planning before trip" data-drop-close="true"><span class="category-name">자유게시판</span></span></a></li>
+					<li class="category-link subcategory category-customer-support"><a class="badge-wrapper none" href="/~~~~~~~/customer-support"><span class="badge-category clear-badge" title="Support Agent moderated forum to discuss and issues." data-drop-close="true"><span class="category-name">고객 지원 게시판</span></span></a></li>
+				</ul>
+			<hr />
+			<div class="menu-container-footer-links">
+			<div class="clearfix">&nbsp;</div>
+			</div>
+			</div>
+			</div>
+			</div>
+			</div>
+			</div>
+				<div class="b-breadcrumbs"><a class="b-breadcrumb b-breadcrumb-home" href="/~~~~~/전체 게시판">전체 게시판 </a> <a class="b-breadcrumb b-breadcrumb-category" href="/~~~~~/후기 게시판"> 후기 글 </a></div>
+			</div>
+			</div>
+		</div>
+		</header>
+	</div>-->
+
+	  <!-- Contact Section -->
+  <section class="page-section" id="contact">
+    <div class="container">
+
+      <!-- Contact Section Heading -->
+      <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Us</h2>
+
+      <!-- Icon Divider -->
+      <div class="divider-custom">
+        <div class="divider-custom-line"></div>
+        <div class="divider-custom-icon">
+          <i class="fas fa-star"></i>
+        </div>
+        <div class="divider-custom-line"></div>
+      </div>
+
+
+
+
+      <!-- Contact Section Form -->
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
+          <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
+          <form name="sentMessage" id="contactForm" novalidate="novalidate">
+            <div class="control-group">
+              <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                <label>성함</label>
+                <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name.">
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+            <div class="control-group">
+              <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                <label>이메일</label>
+                <input class="form-control" id="email" type="email" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address.">
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+            <div class="control-group">
+              <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                <label>전화 번호</label>
+                <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required="required" data-validation-required-message="Please enter your phone number.">
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+            <div class="control-group">
+              <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                <label>내용</label>
+                <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message."></textarea>
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+            <br>
+            <div id="success"></div>
+            <div class="form-group">
+              <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">발송</button>
+            </div>
+          </form>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+  <!-- Contact Form JavaScript -->
+  <script src="js/jqBootstrapValidation.js"></script>
+  <script src="js/contact_me.js"></script>
+
+  <!-- Custom scripts for this template -->
+  <script src="js/freelancer.min.js"></script>
+
+  <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+
 </body>
+
 </html>
