--- a/src/main/java/com/team6/wheretogo/part/header.ejs
+++ b/src/main/java/com/team6/wheretogo/part/header.ejs
@@ -3,7 +3,7 @@
     <ul>
         <li><a href= "tripPlan.ejs">여행 플랜</a></li>
         <li><a href= "tripLog.ejs">여행 일지</a></li>
-        <li><a href= "tripForum.ejs">여행게시판</a></li>
+        <li><a href= "index.ejs">여행게시판</a></li>
         <li><a href= "countryForum.ejs">해외 포럼</a></li>
         <li><a href= "freeForum.ejs">자유게시판</a></li>
     </ul>
