--- a/src/main/java/com/team6/wheretogo/countryForum.ejs
+++ b/src/main/java/com/team6/wheretogo/countryForum.ejs
@@ -1,7 +1,7 @@
 
 <%//받아와야하는 데이터들.
 //검색된 보드
-var boardList[];
+var[] boardList;
 %>
 
 <%//유저 아이디 불러오기.
@@ -81,19 +81,19 @@ if(session.getAttribute("userID")!=null)
 
 						
 						for(int indexNo=NoStart ;(indexNo>=1)&&(indexNo>NoNextStart);indexNo--){
-							BoardDTO board = boardList.get(indexNo-1);%>
+							BoardDTO boardList = boardList.get(indexNo-1);%>
 							<tr>
-								<td><a href = "countryForum2.jsp?boardNo=<%=board[indexNo-1].boardNo()%>" style="text-decoration:none;color:black"><%=indexNo%></a></td>	
-								<td><a href = "countryForum2.jsp?boardNo=<%=board[indexNo-1].boardNo()%>" style="text-decoration:none;color:black">
-									<%if(board[indexNo-1].boardClassfy().equals("Korea")){%>한국
-									<%}else if(board[indexNo-1].boardClassfy().equals("Japan")){%>일본
-									<%}else if(board[indexNo-1].boardClassfy().equals("China")){%>중국
+								<td><a href = "countryForum2.ejs?boardNo=<%=boardList[indexNo-1].boardNo%>" style="text-decoration:none;color:black"><%=indexNo%></a></td>	
+								<td><a href = "countryForum2.ejs?boardNo=<%=boardList[indexNo-1].boardNo%>" style="text-decoration:none;color:black">
+									<%if(boardList[indexNo-1].boardClassfy().equals("Korea")){%>한국
+									<%}else if(boardList[indexNo-1].boardClassfy().equals("Japan")){%>일본
+									<%}else if(boardList[indexNo-1].boardClassfy().equals("China")){%>중국
 									<%} %>
 								</a></td>	
-								<td><a href = "countryForum2.jsp?boardNo=<%=board[indexNo-1].boardNo()%>" style="text-decoration:none;color:black"><%=board[indexNo-1].boardTitle()%></a></td>	
-								<td><a href = "countryForum2.jsp?boardNo=<%=board[indexNo-1].boardNo()%>" style="text-decoration:none;color:black"><%=board[indexNo-1].boardEnrollDate()%></a></td>	
-								<td><a href = "countryForum2.jsp?boardNo=<%=board[indexNo-1].boardNo()%>" style="text-decoration:none;color:black"><%=board[indexNo-1].boardWriter()%></a></td>
-								<td><a href = "countryForum2.jsp?boardNo=<%=board[indexNo-1].boardNo()%>" style="text-decoration:none;color:black"><%=board[indexNo-1].boardViews()%></a></td>	
+								<td><a href = "countryForum2.ejs?boardNo=<%=boardList[indexNo-1].boardNo%>" style="text-decoration:none;color:black"><%=boardList[indexNo-1].boardTitle%></a></td>	
+								<td><a href = "countryForum2.ejs?boardNo=<%=boardList[indexNo-1].boardNo%>" style="text-decoration:none;color:black"><%=boardList[indexNo-1].boardEnrollDate%></a></td>	
+								<td><a href = "countryForum2.ejs?boardNo=<%=boardList[indexNo-1].boardNo%>" style="text-decoration:none;color:black"><%=boardList[indexNo-1].boardWriter%></a></td>
+								<td><a href = "countryForum2.ejs?boardNo=<%=boardList[indexNo-1].boardNo%>" style="text-decoration:none;color:black"><%=boardList[indexNo-1].boardViews%></a></td>	
 							</tr>
 					
 						<%}
@@ -114,33 +114,33 @@ if(session.getAttribute("userID")!=null)
 							if(boardList.size()%boardIndexNoPerPage!=0){MaxIndexAdd1=1;}
 							int MaxIndex=(boardList.size()/boardIndexNoPerPage)+MaxIndexAdd1;%> 
 							<div id="BoardPageNo">
-								<a href="countryForum.jsp?pageNo=<%=1%>"><<</a>
+								<a href="countryForum.ejs?pageNo=<%=1%>"><<</a>
 									<%
 									//시작번호 10넘어가면 현재번호부터 10개
 									if(pageNo>10)
 									{
 										//-10돌아가는 < 추가.%>
-										<a href="countryForum.jsp?pageNo=<%=pageNo-10%>"> &nbsp < &nbsp </a>	
+										<a href="countryForum.ejs?pageNo=<%=pageNo-10%>"> &nbsp < &nbsp </a>	
 										<%//1페이지씩 표시.
 										for(int i=pageNo;(i<pageNo+10)&&(i<=MaxIndex);i++)
 										{%>
-											<a href = "countryForum.jsp?pageNo=<%=i%>"><%=i%></a>
+											<a href = "countryForum.ejs?pageNo=<%=i%>"><%=i%></a>
 										<%}
 										//+10이후 더있으면 +10하는 >추가.
-										if(pageNo+10<MaxIndex){%><a href="countryForum.jsp?pageNo=<%=pageNo+10%>"> &nbsp > &nbsp </a><%}
+										if(pageNo+10<MaxIndex){%><a href="countryForum.ejs?pageNo=<%=pageNo+10%>"> &nbsp > &nbsp </a><%}
 									}else{		
 									//1붙터 시작하면 10or최대값 까지
-										for(int i=1;(i<=MaxIndex);i++){%><a href = "countryForum.jsp?pageNo=<%=i%>"><%=i%></a><%}
+										for(int i=1;(i<=MaxIndex);i++){%><a href = "countryForum.ejs?pageNo=<%=i%>"><%=i%></a><%}
 									}%>
-									<a href="countryForum.jsp?pageNo=<%=MaxIndex%>">>></a>
+									<a href="countryForum.ejs?pageNo=<%=MaxIndex%>">>></a>
 							</div>
 				<%}%>
 				
 				
 				<%if(userID!=null) {%>
-						<div ><a href = "./boardEnroll.jsp?boardType=countryForum"><button  >글쓰기</button></a></div>
+						<div ><a href = "./boardEnroll.ejs?boardType=countryForum"><button  >글쓰기</button></a></div>
 				<%}%>
-				<form action ="./countryForum.jsp" method = "get" >
+				<form action ="./countryForum.ejs" method = "get" >
 					<select name = "boardClassfy" class =  "form-control">
 						<option   value = "All" selected > 나라</option>
 						<option value = "Japan" > 일본</option>
@@ -167,7 +167,7 @@ if(session.getAttribute("userID")!=null)
 	
 		<article id = "LoginLoginMenu">
 			<%if(userID == null){%>
-				<form method = "post" action = "./userLogin.jsp">
+				<form method = "post" action = "./userLogin.ejs">
 					<div id = "IDPWD1">
 					<div id = "id">
 							아이디
@@ -181,15 +181,15 @@ if(session.getAttribute("userID")!=null)
 					</div>
 					<div id = "IDPWD1">
 						<div id = "CreateIDAndPassWord">
-							<a href = "./userJoin.jsp">회원가입</a>
+							<a href = "./userJoin.ejs">회원가입</a>
 						</div>
 						<div id = "FindIDAndPassWord">
-							<a href = "./findID.jsp">아이디찾기 /</a>
-							<a href = "./findPassword.jsp">비밀번호찾기</a>
+							<a href = "./findID.ejs">아이디찾기 /</a>
+							<a href = "./findPassword.ejs">비밀번호찾기</a>
 						</div>
 					</div>
 				</form>
-			<%}else{ %><a href = "./userLogOut.jsp">로그아웃.</a><%} %>
+			<%}else{ %><a href = "./userLogOut.ejs">로그아웃.</a><%} %>
 		</article>
 	</section>
 </body>
